--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "sinon": "^6.3.4"
+    "sinon": "^6.3.5"
+  },
+  "dependencies": {
+    "sinon-chai": "^3.2.0"
   }
 }
