--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "sinon": "^6.3.5"
-  },
-  "dependencies": {
+    "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0"
   }
 }
